--- a/index.html
+++ b/index.html
@@ -15,5 +15,13 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>heading1</h1>
+    <h2>heading2</h2>
+    <h3>heading3</h3>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit dolorem
+      dicta aperiam veritatis sed natus sint voluptatibus illo non fuga!
+    </p>
+  </body>
 </html>
