--- a/index.html
+++ b/index.html
@@ -16,12 +16,6 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
-    <h1>heading1</h1>
-    <h2>heading2</h2>
-    <h3>heading3</h3>
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit dolorem
-      dicta aperiam veritatis sed natus sint voluptatibus illo non fuga!
-    </p>
+    <a href="#" class="link-arrow">Learn More</a>
   </body>
 </html>
