--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
-    <a href="#" class="link-arrow">Learn More</a>
+    <span class="badge badge--primary badge--small">10% OFF</span>
   </body>
 </html>
