--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
-    <span class="badge badge--primary badge--small">10% OFF</span>
+    <ul class="lists list--tick">
+      <li class="list__item">Item 1</li>
+      <li class="list__item">Item 2</li>
+      <li class="list__item">Item 3</li>
+    </ul>
   </body>
 </html>
