--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
-  <body style="padding: 5rem"></body>
+  <body></body>
 </html>
